fix: geo router url
